# sdlcube

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  shaders.sh
resources/shaders/src/: frag.frag  skybox.frag  skybox.vert  vert.vert
src/: camera.cpp  camera.h  cube.cpp  cube.h  gltf_loader.cpp  gltf_loader.h  logger.cpp  logger.h  main.cpp  mesh.h  program.h  skybox.cpp  skybox.h  transform.cpp  transform.h  types.h  util.cpp  util.h
src/cube/: cube.cpp
